--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "bootstrap-icons": "^1.11.1",
     "live-server": "^1.2.2",
     "sass": "^1.69.5"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com"
   }
 }
