--- a/package.json
+++ b/package.json
@@ -31,6 +31,6 @@
     "sass": "^1.69.5"
   },
   "publishConfig": {
-    "registry": "https://npm.pkg.github.com"
+    "registry": "https://npm.pkg.github.com/NoroffFEU/css-frameworks-ca"
   }
 }
