--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,9 @@
         "primarytextcolor",
         "secondtextcolor",
         "thirdcolor"
+    ],
+    "cSpell.ignoreWords": [
+        "LOCALSTORAGE",
+        "SLXEED"
     ]
 }
