--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "0.0.1",
   "description": "A starting point for the CSS Frameworks CA project",
   "scripts": {
-    "start": "live-server",
-    "build": "sass src/scss:dist/css",
-    "watch": "sass --watch src/scss:dist/css"
+    "start": "sass --watch src/scss:dist/css & live-server",
+    "build": "sass src/scss:dist/css"
   },
   "repository": {
     "type": "git",
