--- a/package.json
+++ b/package.json
@@ -3,12 +3,8 @@
   "version": "0.0.1",
   "description": "A starting point for the CSS Frameworks CA project",
   "scripts": {
-    "build-css": "npm run build-css ",
-    "build:scss": "sass src/scss:dist/css",
-    "build:netlify": "npm run build:scss",
-    "watch": "sass --watch src/scss:dist/css",
-    "dev": "npm run watch & live-server",
-    "build": "npm run build:netlify"
+    "build": "sass src/scss:dist/css",
+    "start": "sass --watch src/scss:dist/css & live-server"
   },
   "repository": {
     "type": "git",
